--- a/Rekon - Welcome.ui
+++ b/Rekon - Welcome.ui
@@ -54,7 +54,7 @@
    </property>
    <property name="styleSheet">
     <string notr="true">#widgetMainScreen{
-background-image: url(&quot;C:/Users/marah/Desktop/Licenta GUI/bg.jpg&quot;);
+background-image: url(&quot;C:/Users/marah/Desktop/Licenta-GUI/bg.jpg&quot;);
 background-repeat: no-repeat; 
 background-position: center; 
 }</string>
@@ -202,7 +202,7 @@ border: 2px solid rgb(77, 59, 45);
     </property>
     <property name="styleSheet">
      <string notr="true">#label{
-background-image : url('C:/Users/marah/Desktop/Licenta GUI/logo.png');
+background-image : url('C:/Users/marah/Desktop/Licenta-GUI/logo.png');
 }</string>
     </property>
     <property name="text">
