--- a/Rekon - Stereo Reconstruction.ui
+++ b/Rekon - Stereo Reconstruction.ui
@@ -154,7 +154,7 @@ border: 2px solid rgb(77, 59, 45);
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>370</y>
+      <y>310</y>
       <width>951</width>
       <height>80</height>
      </rect>
@@ -204,8 +204,8 @@ border: 2px solid rgb(77, 59, 45);
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>320</y>
-      <width>291</width>
+      <y>260</y>
+      <width>671</width>
       <height>31</height>
      </rect>
     </property>
@@ -223,7 +223,7 @@ border: 2px solid rgb(77, 59, 45);
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>340</y>
+      <y>280</y>
       <width>621</width>
       <height>31</height>
      </rect>
@@ -243,7 +243,7 @@ border: 2px solid rgb(77, 59, 45);
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>440</y>
+      <y>380</y>
       <width>471</width>
       <height>20</height>
      </rect>
@@ -266,7 +266,7 @@ border: 2px solid rgb(77, 59, 45);
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>270</y>
+      <y>220</y>
       <width>291</width>
       <height>31</height>
      </rect>
@@ -285,7 +285,7 @@ border: 2px solid rgb(77, 59, 45);
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>160</y>
+      <y>130</y>
       <width>621</width>
       <height>41</height>
      </rect>
@@ -305,7 +305,7 @@ border: 2px solid rgb(77, 59, 45);
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>200</y>
+      <y>170</y>
       <width>401</width>
       <height>31</height>
      </rect>
@@ -325,6 +325,98 @@ border: 2px solid rgb(77, 59, 45);
       <string>Block matching using SAD</string>
      </property>
     </item>
+   </widget>
+   <widget class="QCheckBox" name="oCustomQCb">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>420</y>
+      <width>661</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Century Gothic</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Use custom transformation matrix (Q)</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="gridLayoutWidget_5">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>460</y>
+      <width>951</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <layout class="QGridLayout" name="oCalibrFilesLayout_2">
+     <item row="0" column="0">
+      <widget class="QPushButton" name="oCustomQBtn">
+       <property name="minimumSize">
+        <size>
+         <width>250</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>500</width>
+         <height>50</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <family>Century Gothic</family>
+         <pointsize>16</pointsize>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">#oCustomQBtn {
+border-radius:20px;
+background-color:rgba(255, 255, 255, 0.5);
+border: 2px solid rgb(77, 59, 45);
+}
+#oUploadBtn:hover{
+	background-color: rgba(0, 0, 0, 0.3);
+	color: rgb(255, 255, 255);
+	border: 2px solid rgb(0, 0, 0);
+}
+</string>
+       </property>
+       <property name="text">
+        <string>Upload file (*.yml)</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+   <widget class="QLabel" name="sQFilePath">
+    <property name="geometry">
+     <rect>
+      <x>260</x>
+      <y>530</y>
+      <width>471</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Century Gothic</family>
+      <pointsize>11</pointsize>
+      <italic>true</italic>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: rgb(184, 181, 165)</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
    </widget>
   </widget>
  </widget>
